<resources>
    <string name="app_name">LetsWatchFootballTogether</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name_kor">같이 축구 볼 사람?</string>

    <!-- Navigation Graph -->
    <string name="label_sign_in_destination">Sign In</string>
    <string name="label_setting_destination">Setting</string>
    <string name="label_home_destination">Home</string>
    <string name="label_chat_destination">Chat</string>
    <string name="label_profile_destination">Profile</string>

    <!-- 로그인/회원가입 -->
    <string name="error_message_no_google_uid">구글 계정을 확인할 수 없습니다. 다시 시도해주시기 바랍니다.</string>
    <string name="error_message_sign_in_not_available">로그인/회원가입 할 수 없습니다. 다시 시도해주시기 바랍니다.</string>

    <!-- 프로필 설정 -->
    <string name="guide_message_set_profile">프로필을 설정해주세요.</string>
    <string name="hint_write_nickname">닉네임을 입력해주세요.</string>
    <string name="label_settings_complete">설정 완료하기</string>
    <string name="content_description_set_profile_picture">클릭하여 프로필 사진을 설정할 수 있습니다.</string>
    <string name="error_message_empty_nick_name">닉네임을 입력해주세요.</string>
    <string name="error_message_max_length">20자 이내로 입력해주세요.</string>
    <string name="error_message_duplicate_nick_name">중복된 닉네임입니다.</string>
    <string name="error_message_setting_failed">프로필 설정 실패하였습니다. 잠시후 다시 시도해주세요.</string>
    <string name="error_message_setting_not_available">프로필 설정할 수 없습니다. 잠시후 다시 시도해주세요.</string>
    <string name="error_message_setting_input_not_complete">프로필 사진, 닉네임을 모두 설정해주세요.</string>

    <!-- 글쓰기 -->
    <string name="title_write_post">모집 글쓰기</string>
    <string name="hint_post_title">모집명</string>
    <string name="hint_post_location">장소</string>
    <string name="hint_post_time">시간</string>
    <string name="hint_post_recruit_number">모집 인원</string>
    <string name="hint_post_description">모집에 대한 설명을 작성해주세요.</string>
    <string name="label_complete">완료</string>
    <string name="hint_posting_date">날짜</string>
    <string name="guide_message_please_wait">잠시 기다려주세요.</string>
    <string name="number_of_image_displayed">/%d</string>
    <string name="guide_message_set_image">이미지를 추가해주세요.</string>
    <string name="guide_message_set_title">모집명을 작성해주세요.</string>
    <string name="guide_message_set_location">장소를 추가해주세요.</string>
    <string name="guide_message_set_date">날짜를 추가해주세요.</string>
    <string name="guide_message_set_time">시간을 추가해주세요.</string>
    <string name="guide_message_set_max_participants">모집 인원을 작성해주세요.(모집 인원이 0명인 모임은 개설할 수 없습니다.)</string>
    <string name="guide_message_set_description">모집에 대한 설명을 작성해주세요.</string>
    <string name="guide_message_limit_max_images">사진은 10장까지 추가할 수 있습니다.</string>
    <string name="title_set_date">모임 날짜를 정해주세요.</string>
    <string name="title_set_time">모임 시간을 정해주세요</string>
    <string name="label_am_time">오전 %1$d:%2$d</string>
    <string name="label_pm_time">오후 %1$d:%2$d</string>
    <string name="error_message_post_failed">게시물 등록에 실패하였습니다. 잠시후 다시 시도해주세요.</string>

    <!-- 홈 -->
    <string name="title_lets_watch_football">같이 축구 볼 사람?</string>
    <string name="header_new_posts">신규 모임</string>
    <string name="header_popular_posts">인기 많은 모임</string>
    <string name="header_all_posts">전체 모임</string>
    <string name="label_home">홈</string>
    <string name="label_chat">채팅</string>
    <string name="label_profile">프로필</string>
    <string name="error_message_loading_failed">게시물 불러오기에 실패하였습니다. 잠시후 다시 시도해주세요.</string>

    <!-- 상세 화면 -->
    <string name="label_number_of_participants">참여 인원 (%1$d/%2$d명)</string>
    <string name="label_participate">참여하기</string>
    <string name="label_chat_room">채팅방</string>
    <string name="guide_message_already_participated">이미 참여 중인 모임입니다.</string>
    <string name="guide_message_exceed_maximum_participants">모집 최대 인원을 초과하였습니다.</string>
    <string name="guide_message_participate_succeeded">참여 완료되었습니다.</string>
    <string name="guide_message_join_restricted">모임에 참여한 사람만 채팅방에 입장할 수 있습니다.</string>
    <string name="error_message_not_loaded">상세화면 불러오기에 실패하였습니다. 잠시후 다시 시도해주세요.</string>
    <string name="error_message_participate_failed">모임에 참여 실패하였습니다. 잠시후 다시 시도해주세요.</string>

    <!-- 채팅방 -->
    <string name="hint_write_message">메세지를 입력해주세요.</string>
    <string name="error_message_chat_room_loading_failed">채팅방 불러오기에 실패하였습니다. 잠시후 다시 시도해주세요.</string>

    <!-- 채팅 목록 -->
    <string name="title_chat_room_list">채팅</string>
    <string name="error_message_chat_room_list_loading_failed">네트워크 통신에 실패하였습니다. 잠시후 다시 시도해주세요.</string>
    <string name="guide_message_participated_in_no_chat_room">참여 중인 채팅방이 없습니다.</string>

    <!-- 프로필 -->
    <string name="title_profile">프로필</string>
    <string name="label_nick_name">닉네임</string>
    <string name="label_my_events">내 모임</string>
    <string name="label_delete_account">탈퇴하기</string>
    <string name="error_message_profile_loading_failed">프로필 불러오기에 실패하였습니다. 잠시후 다시 시도해주세요.</string>
    <string name="guide_message_delete_user_successful">성공적으로 탈퇴되었습니다.</string>
    <string name="error_message_delete_user_failed">탈퇴 실패하였습니다. 잠시후 다시 시도해주세요.</string>

</resources>