<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_graph"
    app:startDestination="@id/signInFragment">

    <fragment
        android:id="@+id/signInFragment"
        android:name="com.ranicorp.letswatchfootballtogether.ui.signIn.SignInFragment"
        android:label="@string/label_sign_in_destination"
        tools:layout="@layout/fragment_sign_in" >
        <action
            android:id="@+id/action_signInFragment_to_settingFragment"
            app:destination="@id/settingFragment" />
        <action
            android:id="@+id/action_signInFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingFragment"
        android:name="com.ranicorp.letswatchfootballtogether.ui.setting.SettingFragment"
        android:label="@string/label_setting_destination"
        tools:layout="@layout/fragment_setting" >
        <action
            android:id="@+id/action_settingFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <argument
            android:name="googleUid"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.ranicorp.letswatchfootballtogether.ui.home.HomeFragment"
        android:label="@string/label_home_destination"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_postingFragment"
            app:destination="@id/postingFragment" />
    </fragment>
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.ranicorp.letswatchfootballtogether.ui.chat.ChatFragment"
        android:label="@string/label_chat_destination"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.ranicorp.letswatchfootballtogether.ui.profile.ProfileFragment"
        android:label="@string/label_profile_destination"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.ranicorp.letswatchfootballtogether.ui.detail.DetailFragment"
        android:label="fragment_detail"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="postUid"
            app:argType="string" />
    </fragment>

    <action
        android:id="@+id/action_global_detailFragment"
        app:destination="@id/detailFragment" />
    <fragment
        android:id="@+id/postingFragment"
        android:name="com.ranicorp.letswatchfootballtogether.ui.posting.PostingFragment"
        android:label="PostingFragment" />
</navigation>