<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ranicorp.letswatchfootballtogether.ui.setting.SettingViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.setting.SettingFragment">

        <TextView
            android:id="@+id/tvSetProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/guide_message_set_profile"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/ivProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupAddProfileImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="ivProfile, ivCamera" />

        <ImageView
            android:id="@+id/ivProfile"
            imageUri="@{viewModel.profileUri}"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/content_description_set_profile_picture"
            android:src="@drawable/ic_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSetProfile" />

        <ImageView
            android:id="@+id/ivCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="-13dp"
            android:layout_marginBottom="-8dp"
            android:contentDescription="@string/content_description_set_profile_picture"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_camera"
            app:layout_constraintBottom_toBottomOf="@id/ivProfile"
            app:layout_constraintEnd_toEndOf="@id/ivProfile" />

        <EditText
            android:id="@+id/etNickname"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_edit_nickname"
            android:hint="@string/hint_write_nickname"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@{viewModel.nickName}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivProfile" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnComplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"
            android:onClick="@{() -> viewModel.addUser()}"
            android:stateListAnimator="@null"
            android:text="@string/label_settings_complete"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>